Fix swagger comments.
